# python-scripts

./: .gitignore  .pre-commit-config.yaml  README.md  com.pelotech.worktimeoff.plist  main.py  pyproject.toml
.github/: dependabot.yaml
.github/actions/setup-python/: action.yaml
.github/workflows/: main.yaml  tests.yaml
work-time-off/: main.py
worktimeoff/: main.py
