[project]
name = "python-scripts"
version = "0.1.0"
description = "All the Python scripts you need!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "slack-sdk>=3.33.2",
]

[project.scripts]
worktimeoff = "worktimeoff.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "worktimeoff"
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.386",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
