[project]
name = "python-scripts"
version = "0.1.0"
description = "Wrap Python packages to pull dependencies and run tools against it."
requires-python = ">=3.13"
dependencies = [
    "worktimeoff",
    "aws_cost_estimator",
    "pyright>=1.1.389",
    "ruff>=0.7.1",
]

[tool.uv.sources]
worktimeoff = { workspace = true }
aws_cost_estimator = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.hatch.build.targets.wheel]
packages = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
